@@ -43,8 +43,11 @@ pcre_objects = pcre_chartables pcre_compile pcre_globals pcre_maketables \
 
 pcre_utf8_objects = pcre_ucd pcre_tables
 
+ifndef POCO_UNBUNDLED
+$(warning POCO_NO_ODBC NOT defined)
+endif
+
 ifdef POCO_UNBUNDLED
-	objects += $(pcre_utf8_objects) 
 	SYSLIBS += -lpcre -lz
 else
 	objects += $(zlib_objects) $(pcre_objects) $(pcre_utf8_objects)
