@@ -80,8 +80,10 @@ public:
 	enum Family
 		/// Possible address families for IP addresses.
 	{
-		IPv4,
-		IPv6
+		IPv4
+#ifdef POCO_HAVE_IPv6
+		,IPv6
+#endif
 	};
 	
 	IPAddress();
