@@ -96,10 +96,13 @@ void Net_API uninitializeNetwork();
 } } // namespace Poco::Net
 
 
-// Define to enable IPv6 support
-#if !defined (POCO_HAVE_IPv6)
+// Default to enabled IPv6 support if not explicitly disabled
+#if !defined(POCO_NET_NO_IPv6) && !defined (POCO_HAVE_IPv6)
 	#define POCO_HAVE_IPv6
-#endif // POCO_HAVE_IPv6
+#elif defined(POCO_NET_NO_IPv6) && defined (POCO_HAVE_IPv6)
+	#undef POCO_HAVE_IPv6
+#endif // POCO_NET_NO_IPv6, POCO_HAVE_IPv6
+
 
 #if !defined(s6_addr16)
 	#if defined(POCO_OS_FAMILY_WINDOWS)
