@@ -140,7 +140,13 @@ void SecureSocketImpl::connect(const SocketAddress& address, const Poco::Timespa
 	poco_assert (!_pSSL);
 
 	_pSocket->connect(address, timeout);
+	Poco::Timespan receiveTimeout = _pSocket->getReceiveTimeout();
+	Poco::Timespan sendTimeout = _pSocket->getSendTimeout();
+	_pSocket->setReceiveTimeout(timeout);
+	_pSocket->setSendTimeout(timeout);
 	connectSSL(performHandshake);
+	_pSocket->setReceiveTimeout(receiveTimeout);
+	_pSocket->setSendTimeout(sendTimeout);
 }
 
 
@@ -149,15 +155,8 @@ void SecureSocketImpl::connectNB(const SocketAddress& address)
 	if (_pSSL) reset();
 	
 	poco_assert (!_pSSL);
-
 	_pSocket->connectNB(address);
-	Poco::Timespan receiveTimeout = _pSocket->getReceiveTimeout();
-	Poco::Timespan sendTimeout = _pSocket->getSendTimeout();
-	_pSocket->setReceiveTimeout(timeout);
-	_pSocket->setSendTimeout(timeout);
 	connectSSL(false);
-	_pSocket->setReceiveTimeout(receiveTimeout);
-	_pSocket->setSendTimeout(sendTimeout);
 }
 
 
