@@ -29,6 +29,9 @@ Release 1.5.0 (2012-08-??)
 - fixed SF# 3012166: IPv6 patch
 - added SF# 3558085: Add formatter to MACAddress object
 - fixed SF# 3535990: POCO_HAVE_IPv6 without POCO_WIN32_UTF8 conflict
+- fixed SF #3552774: Don't hide default target in subordinate makefile
+- fixed SF #3534307: Building IPv6 for Linux by default
+- fixed SF #3516844: poco missing symbols with external >=lipcre-8.13 
 
 Release 1.4.4 (2012-08-??)
 ==========================
